--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.43MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇯🇵 日本-1.68MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-153.1KB/s(Youtube:不良林), server: 185.167.116.252, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇦🇺 澳大利亚-154.9KB/s(Youtube:不良林), server: 185.167.116.252, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇨🇳 中国-156.3KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-402.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-381.1KB/s(Youtube:不良林), server: streaming-1-route.teacher2050.com, port: 31222, type: vmess, uuid: B8AAA6E1-F0B3-B9EC-3DFC-BB226C167B33, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-455.9KB/s(Youtube:不良林), server: bgp.keaiyun.top, port: 47519, type: vmess, uuid: 8ee169e4-c232-388e-8143-bf497f48b362, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1020.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇨🇳 中国-8.43MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
+  - {name: 🇨🇳 中国-318.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇩🇪 德国-153.2KB/s(Youtube:不良林), server: 5.183.179.139, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇨🇦 加拿大-2.81MB/s(Youtube:不良林), server: t04.tgfaka.com, port: 18443, type: trojan, password: 704585e5-cb0c-4354-83d5-8756ba9a05ad, sni: t04.tgfaka.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林), server: 185.167.116.252, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-943.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-153.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-154.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-153.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-154.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-153.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-154.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-153.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-154.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-153.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-154.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-153.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-154.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-153.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-154.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
