--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1020.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇨🇳 中国-318.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇩🇪 德国-153.2KB/s(Youtube:不良林), server: 5.183.179.139, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇨🇦 加拿大-2.81MB/s(Youtube:不良林), server: t04.tgfaka.com, port: 18443, type: trojan, password: 704585e5-cb0c-4354-83d5-8756ba9a05ad, sni: t04.tgfaka.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林), server: 185.167.116.252, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-943.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: bgp.keaiyun.top, port: 47520, type: vmess, uuid: 8ee169e4-c232-388e-8143-bf497f48b362, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.72MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 38.91.102.86, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇰🇷 韩国-3.47MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
+  - {name: 🇭🇰 香港-459.6KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-931.5KB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-564.9KB/s(Youtube:不良林), server: 38.91.102.86, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇰🇷 韩国-1.58MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.81MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-459.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-931.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-459.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-931.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-459.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-931.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-459.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-459.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-931.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-459.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-931.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-459.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-931.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1020.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-663.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-153.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-612.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-943.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-459.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-931.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-564.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
